--- a/client.html
+++ b/client.html
@@ -369,9 +369,9 @@ function linkify( selector ) {
 		
 		    multiplex: {
         // Example values. To generate your own, see the socket.io server instructions.
-        secret: '13652805320794272084', // Obtained from the socket.io server. Gives this (the master) control of the presentation
+        secret: null, // Obtained from the socket.io server. Gives this (the master) control of the presentation
         id: '1ea875674b17ca76', // Obtained from socket.io server
-        url: '192.168.2.1:1947' // Location of socket.io server
+        url: '127.0.0.1:1947' // Location of socket.io server
     },
 		
 				// Parallax scrolling
@@ -381,7 +381,7 @@ function linkify( selector ) {
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
 		{ src: '//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.10/socket.io.min.js', async: true },
-        { src: 'plugin/multiplex/master.js', async: true },
+        { src: 'plugin/multiplex/client.js', async: true },
 
         // and if you want speaker notes
         { src: 'plugin/notes-server/client.js', async: true },
