--- a/client.html
+++ b/client.html
@@ -37,10 +37,10 @@
 
 	<body>
 
-		<div class="reveal">
+		<div id="slideels-container" class="reveal">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
+			<div id="slideels" class="slides">
 				<section>
 					<section>
 					  <h1>Now:</h1>
