--- a/master.html
+++ b/master.html
@@ -19,7 +19,7 @@
     </div>
  	
     <div style="height:80%" data-role="content" id="content">
-    	<iframe src="index.html" width="100%" height="100%" scrolling="no" align="center" frameborder="0">
+    	<iframe src="/master" width="100%" height="100%" scrolling="no" align="center" frameborder="0">
 		</iframe>
     </div>
  
