--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ function linkify( selector ) {
         // Example values. To generate your own, see the socket.io server instructions.
         secret: '13652805320794272084', // Obtained from the socket.io server. Gives this (the master) control of the presentation
         id: '1ea875674b17ca76', // Obtained from socket.io server
-        url: '192.168.2.1:1947' // Location of socket.io server
+        url: location.host //'192.168.2.1:1947' // Location of socket.io server
     },
 		
 				// Parallax scrolling
