--- a/client.html
+++ b/client.html
@@ -61,6 +61,9 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div id="slideels" class="slides">
 				<section>
+                  <h1>Hi</h1>
+				</section>
+				<section>
 					<section>
 					  <h1>Now:</h1>
 					</section>
@@ -417,7 +420,7 @@ function linkify( selector ) {
 			// Full list of configuration options available here:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: true,
+				controls: false,
 				progress: true,
 				history: true,
 				center: true,
