use nonmin js to change transition effects

--- a/client.html
+++ b/client.html
@@ -386,7 +386,7 @@ function linkify( selector ) {
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.min.js"></script>
+		<script src="js/reveal.js"></script>
 
 		<script>
 		      $(document).ready(function() {
