--- a/master.html
+++ b/master.html
@@ -353,6 +353,7 @@ function linkify( selector ) {
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
+		<script src="js/postMsgHandle.js"></script>
 
 		<script>
 
