--- a/client.html
+++ b/client.html
@@ -57,11 +57,22 @@
 	<body>
 
 		<div id="slideels-container" class="reveal">
-
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div id="slideels" class="slides">
+
 				<section>
-                  <h1>Hi</h1>
+                  <section>
+                    <h1 style="font-size:256pt;">Hi</h1>
+                  </section>
+                  <section>
+                    <h1 style="font-size:200pt;">Hi</h1>
+                  </section>
+                  <section>
+                    <h1 style="font-size:128pt;">Hi</h1>
+                  </section>
+                  <section>
+                    <h1 style="font-size:82pt;">Hi</h1>
+                  </section>
 				</section>
 				<section>
 					<section>
@@ -78,16 +89,37 @@
 					</section>
 				</section>
 
+                <!-- What is this Reveal-Wall.js , -->
 				<section>
+                   <!-- yes reveal.js -->
+                  <section>
+					<h1>Reveal.js</h1>
+					<h3>HTML Presentations Made Easy</h3>
+					<p>
+					  <small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+					</p>
+                  </section>
+                  <!-- ofcause Nodejs. -->
+                  <section data-background="/res/nodejs-1920x1200.png">
+                    <!--
 					<h2>Heads Up</h2>
 					<p>
 						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
 						support for CSS 3D transforms to see it in its full glory.
 					</p>
-
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 					</aside>
+                    -->
+                  </section>
+                  <!-- And Socket.io -->
+                  <section>
+                    
+                  </section>
+                  <!-- jquery mobile -->
+                  <section>
+                    
+                  </section>
 				</section>
 
 				<!-- Example of nested vertical slides -->
