transition effect: 'linear_tv' for tv wall.

--- a/client.html
+++ b/client.html
@@ -60,20 +60,20 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div id="slideels" class="slides">
-				<section>
+				<section data-transition=fade>
                   <h1>Hi</h1>
 				</section>
 				<section>
-					<section>
+					<section data-transition='linear_tv'>
 					  <h1>Now:</h1>
 					</section>
-					<section>
+					<section data-transition='linear_tv'>
                       <p class="clock-hr" style="zoom: 2.5; -webkit-transform: scale(2.5);margin-left: 300px;"></p>
 					</section>
-					<section>
+					<section data-transition='linear_tv'>
                       <p class="clock-min" style="zoom: 2.5; -webkit-transform: scale(2.5);margin-left: 300px;"></p>
 					</section>
-					<section>
+					<section data-transition='linear_tv'>
                       <p class="clock-sec" style="zoom: 2.5; -webkit-transform: scale(2.5);margin-left: 300px;"></p>
 					</section>
 				</section>
