use linear_tv as default.

--- a/public/index.html
+++ b/public/index.html
@@ -64,24 +64,24 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-3">
-		  <a href="/client?num=1&theme=night">
+		  <a href="/client?num=1&theme=night&transition=linear_tv">
 			<img class="featurette-image img-responsive" src="/res/tv-servizi.png" alt="Generic placeholder image"></img></a>
           <h2>Client 1</h2>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-3">
-		  <a href="/client?num=2&theme=night">
+		  <a href="/client?num=2&theme=night&transition=linear_tv">
 			<img class="featurette-image img-responsive" src="/res/tv-servizi.png" alt="Generic placeholder image"></img>
 		  </a>
           <h2>Client 2</h2>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-3">
-		  <a href="/client?num=3&theme=night">
+		  <a href="/client?num=3&theme=night&transition=linear_tv">
 			<img class="featurette-image img-responsive" src="/res/tv-servizi.png" alt="Generic placeholder image"></img>
 		  </a>
           <h2>Client 3</h2>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-3">
-		  <a href="/client?num=4&theme=night">
+		  <a href="/client?num=4&theme=night&transition=linear_tv">
 			<img class="featurette-image img-responsive" src="/res/tv-servizi.png" alt="Generic placeholder image"></img>
 		  </a>
           <h2>Client 4</h2>
