1.)Modified slide content.

--- a/client.html
+++ b/client.html
@@ -73,24 +73,12 @@
 		<div id="slideels-container" class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div id="slideels" class="slides">
+              <!-- 1 -->
 		      <section data-transition='linear_tv'>
                 <h1>Reveal-Wall.JS</h1>
                 <h3>for Fun</h3>
 		      </section>
-			  <section>
-                <section>
-                  <h1>What</h1>
-                </section>
-                <section>
-                  <h1>is</h1>
-                </section>
-                <section>
-                  <h1>Reveal-Wall.js</h1>
-                </section>
-                <section>
-                  <h1>???</h1>
-                </section>
-			  </section>
+              <!-- 2 -->
 			  <section>
 				<section data-transition='linear_tv'>
                   <h1>The Flip Clock</h1>
@@ -106,6 +94,22 @@
                   <p class="clock-sec" style="zoom: 2.5; -webkit-transform: scale(2.5);margin-left: 300px;"></p>
 				</section>
 			  </section>
+              <!-- 3 -->
+			  <section>
+                <section>
+                  <h1>Reveal-Wall.JS</h1>
+                </section>
+                <section>
+                  <h1>is a</h1>
+                </section>
+                <section>
+                  <h1>TV-Wall</h1>
+                </section>
+                <section>
+                  <h1>Present APP</h1>
+                </section>
+			  </section>
+              <!-- 4 -->
 				<section>
                   <section>
                     <h1>Members:</h1>
@@ -120,7 +124,31 @@
                     <h1 style="font-size:82pt;">Amin</h1>
                   </section>
 				</section>
-                <!-- What is this Reveal-Wall.js , -->
+                <!-- 5 -->
+				<section>
+                  <section>
+                    <h1>App比賽我們要做什麼?</h1>
+                  </section>
+                  <section>
+                    <h1 style="font-size:200pt;">Yen:</h1>
+                    <h2>都好。</h2>
+                  </section>
+                  <section>
+                    <h1 style="font-size:128pt;">Louis:</h1>
+                    <h2>隨便。</h2>
+                  </section>
+                  <section>
+                    <h1 style="font-size:82pt;">Amin:</h1>
+                    <h2>不知道。</h2>
+                  </section>
+				</section>
+                <!-- 6 -->
+                <section>
+                  <h1>到了最後一天</h1>
+                  <h1>因為來不及了</h1>
+                  <h2>所以就這樣產生了Reveal-Wall.JS</h2>
+                </section>
+                <!-- 7 -->
 				<section>
                   <section>
                     <h1>How</h1>
