--- a/master.html
+++ b/master.html
@@ -35,23 +35,40 @@
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
+              <!-- 1 -->
 			  <section data-transition='linear_tv'>
                 <h1>Cover</h1>
 			  </section>
-			  <section data-transition='linear_tv'>
-                <h1>Reveal-Wall.JS</h1>
-                <h2>is a tv-wall present app.</h2>
-			  </section>
+              <!-- 2 -->
 			  <section>
-				<h2>Multiplex client</h2>
-				<p> and display different slide for each client</p>
+				<h1>現在開始</h1>
+                <h1>要撐15分鐘</h1>
+				<h2>總之先花個1分鐘時間看時鐘特效</h2>
 			  </section>
-				<!-- Example of nested vertical slides -->
+              <!-- 3 -->
+			  <section data-transition='linear_tv'>
+                <h1>什麼是Reveal-Wall.JS?</h1>
+			  </section>
+				<!-- 4 -->
 				<section>
-				  <h1>Who are we?</h1>
+				  <h1>我們是誰？</h1>
+				  <h3>既然你誠心誠意的問了，就..</h3>
+				  <h4>再撐個30秒</h4>
 				</section>
+                <!-- 5 -->
 				<section>
-					<h2>You may ask..</h2>
+					<h1>為什麼我們要做Reveal-Wall.JS</h1>
+                    <h3>原因是：</h3>
+				</section>
+                <!-- 6 -->
+                <section>
+                  <h1>到了最後一天</h1>
+                  <h1>因為來不及了</h1>
+                  <h2>所以就這樣產生了Reveal-Wall.JS</h2>
+                </section>
+
+				<section>
+					<h2>you may ask..</h2>
 				</section>
 
 				<section>
