enter full screen when click the title.

--- a/client.html
+++ b/client.html
@@ -75,7 +75,7 @@
 			<div id="slideels" class="slides">
               <!-- 1 -->
 		      <section data-transition='linear_tv'>
-                <h1>Reveal-Wall.JS</h1>
+                <h1 onclick='enterFullscreen();'>Reveal-Wall.JS</h1>
                 <h3>for Fun</h3>
 		      </section>
               <!-- 2 -->
