--- a/master.html
+++ b/master.html
@@ -75,16 +75,26 @@
 				<section>
 					<h2>Using those frameworks.</h2>
 				</section>
-
+                <!-- 9 -->
 				<section>
-					<h2>Works in Mobile Safari..</h2>
+					<h1>TV畫廊</h1>
+					<p>大師的畫受人景仰，如濤濤江水，連綿不絕...</p>
+				</section>
+                <!-- 10 -->
+				<section>
+					<h2>Embedded D3</h2>
 					<p>
                       Let me show you .. (Control by iPad)
 					</p>
 				</section>
-
+                <!-- 11 -->
 				<section>
-					<h2>TV wall layouts..</h2>
+					<h2>Liner Picture</h2>
+					<p>Let me show you .. (Control by iPad)</p>
+				</section>
+                <!-- 12 -->
+				<section>
+				  <h2>TV wall Grid Layouts..</h2>
                     <p>TODO: change notebook layout</p>
 				</section>
 
