--- a/client.html
+++ b/client.html
@@ -24,7 +24,7 @@
 		<script src="clock/js/flipclock/libs/base.js"></script>
 		<script src="clock/js/flipclock/flipclock.js"></script>
 		<script src="clock/js/flipclock/faces/counter.js"></script>
-		<script src="/lib/js/d3.v3.js"></script>
+		<script src="lib/js/d3.v3.js"></script>
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -379,7 +379,7 @@
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
-
+		<script src="js/d3init.js"></script>
 		<script>
 		      $(document).ready(function() {
 			    var clock_hr;
