1.)merge d3, linear picture

--- a/master.html
+++ b/master.html
@@ -76,6 +76,11 @@
 					<h2>Using those frameworks.</h2>
 				</section>
                 <!-- 9 -->
+                <section>
+                  <h1>而且，我們也..</h1><h1>OPEN Source</h1>
+                  <p>https://github.com/50k/reveal.js</p>
+                </section>
+                <!-- 9-2 -->
 				<section>
 					<h1>TV畫廊</h1>
 					<p>大師的畫受人景仰，如濤濤江水，連綿不絕...</p>
