--- a/client.html
+++ b/client.html
@@ -190,6 +190,11 @@
                   </section>
 				</section>
 
+                <section>
+				  <h1>Open Source</h1>
+				  <h3>on GitHub</h3>
+				  <p>https://github.com/50k/reveal.js</p>
+                </section>
 				<!-- 9 -->
 				<section>
 					<section data-background='/res/monarisa.jpg'>
@@ -235,13 +240,13 @@
 				</section>
                 <!-- 11 -->
 				<section>
-					<section data-transition='linear_tv' fullscreen-img="img/1.jpg">
+					<section data-transition='linear_tv' data-background="/res/1.jpg">
 					</section>
-					<section data-transition='linear_tv' fullscreen-img="img/2.jpg">
+					<section data-transition='linear_tv' data-background="/res/2.jpg">
 					</section>
-					<section data-transition='linear_tv' fullscreen-img="img/3.jpg">
+					<section data-transition='linear_tv' data-background="/res/3.jpg">
 					</section>
-					<section data-transition='linear_tv' fullscreen-img="img/4.jpg">
+					<section data-transition='linear_tv' data-background="/res/4.jpg">
 					</section>
 				</section>
                 <!-- 12 -->
