--- a/client.html
+++ b/client.html
@@ -337,7 +337,7 @@
 				    </p>
 				  </section>
 				  <section>
-				    <video id='firework' width=100% height=100% data-autoplay controls>
+				    <video id='firework' width='100%' height='100%' data-autoplay>
 				      <source src='/res/firework.mp4' type="video/mp4">
 				      <source src='/res/firework.webm' type="video/webm">
 				    </video>
@@ -374,26 +374,52 @@
 				  </section>
 
 				</section>
-
+                <!-- 13 -->
 				<section>
 					<section>
-						<h2>MV Cover</h2>
-						<p>
-						</p>
+						<h1>HTML5 =</h1>
 					</section>
 					<section>
-						<h2>MV video</h2>
-						<p></p>
+						<h1>HTML +</h1>
 					</section>
 					<section>
-						<h2>Artist</h2>
-						<p></p>
+						<h1>CSS +</h1>
 					</section>
 					<section>
-						<h2>lyrics</h2>
-						<p></p>
+						<h1>Javascript</h1>
 					</section>
 				</section>
+                <!-- 14 -->
+				<section>
+					<section>
+						<h1>BJ4 !!</h1>
+					</section>
+					<section>
+						<h1>BJ4 !!</h1>
+					</section>
+					<section>
+						<h1>BJ4 !!</h1>
+					</section>
+					<section>
+						<h1>BJ4 !!</h1>
+					</section>
+				</section>
+                <!-- 15 -->
+				<section>
+					<section>
+						<h1>AWESOME ！！</h1>
+					</section>
+					<section>
+						<h1>AWESOME ！！</h1>
+					</section>
+					<section>
+						<h1>強！！！！</h1>
+					</section>
+					<section>
+						<h1>強！！！！</h1>
+					</section>
+				</section>
+                <!-- 16 -->
 				<section>
 					<h1>THE END</h1>
 					<h3>BY 阿菜小隊</h3>
