--- a/master.html
+++ b/master.html
@@ -94,27 +94,34 @@
 				<section>
 					<h2>Embedded D3</h2>
 					<p>
-                      Let me show you .. (Control by iPad)
+                      因為 Reveal.JS，我們可以亂加。
 					</p>
 				</section>
                 <!-- 11 -->
 				<section>
 					<h2>Liner Picture</h2>
-					<p>Let me show you .. (Control by iPad)</p>
+					<p>Let me show you ..</p>
 				</section>
                 <!-- 12 -->
 				<section>
-				  <h2>TV wall Grid Layouts..</h2>
-                    <p>TODO: change notebook layout</p>
+				  <h2>TV WALL Grid Layout</h2>
+                    <p>Change notebook layout</p>
 				</section>
-
+                <!-- 13 -->
 				<section>
-					<h2>Video play</h2>
-					<ol>
-						<li>playing ...</li>
-					</ol>
+				  <h1>What is HTML5?</h1>
+				  <h1>什麼是HTML5?</h1>
 				</section>
-
+                <!-- 14 -->
+				<section>
+				  <h1>其它的!</h1><h1>不解釋！！</h1>
+				</section>
+                <!-- 15 -->
+				<section>
+					<h1>Because ! HTML5 is ... </h1>
+					<h1>因為! HTML5 就是 ...</h1>
+				</section>
+                <!-- 16 -->
 				<section>
 					<h1>THANK YOU</h1>
 					<h3>BY 阿菜小隊</h3>
@@ -158,7 +165,7 @@
         { src: 'plugin/multiplex/master.js', async: true },
 
         // and if you want speaker notes
-        { src: 'plugin/notes-server/client.js', async: true },
+                               //{ src: 'plugin/notes-server/client.js', async: true },
 		
 					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
 					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
