1.)update index.html

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,6 @@
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      </ol>
       <div class="carousel-inner">
         <div class="item active">
           <div class="container">
@@ -44,7 +41,10 @@
               <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
 			  -->
 			  <p>玩樂你的展示牆</p>
-              <p><a class="btn btn-lg btn-primary" href="/controller" role="button">Master Control</a></p>
+              <p>
+                <a class="btn btn-lg btn-primary" href="/controller" role="button">Master Control</a>
+                <a class="btn btn-lg btn-primary" href="/masterview" role="button">Master View</a>
+              </p>
             </div>
           </div>
         </div>
