--- a/client.html
+++ b/client.html
@@ -374,6 +374,16 @@
 				  </section>
 
 				</section>
+				<section>
+					<section data-background='/res/91.jpg'>
+					</section>
+					<section data-background='/res/92.jpg'>
+					</section>
+					<section data-background='/res/93.jpg'>
+					</section>
+					<section data-background='/res/94.jpg'>
+					</section>
+				<section>
                 <!-- 13 -->
 				<section>
 					<section>
